Revert "Message edit no longer cut off for first messages"
This reverts commit 10d9ec66b3ecbfe56589bf6483a7b08f279088fa.

--- a/app/assets/stylesheets/components/messages/message_list.css
+++ b/app/assets/stylesheets/components/messages/message_list.css
@@ -6,7 +6,8 @@
   flex-direction: column;
   width: 100%;
   background-color: lightgoldenrodyellow;
-  padding: 0px 0px 0px 0px;
+  padding: 10px 0px 0px 0px;
+
 }
 
 .message-list-list{
@@ -15,9 +16,4 @@
   display:flex;
   flex-direction: column;
   overflow-y: auto;
-  position: relative;
-}
-
-.message-list-list li:first-of-type{
-  padding-top: 16px;
 }
