--- a/app/assets/stylesheets/components/messages/message_show.css
+++ b/app/assets/stylesheets/components/messages/message_show.css
@@ -11,7 +11,6 @@
   /* overflow: visible; */
   /* height: 55px; */
   position: relative;
-  /* overflow-y: hidden; */
 }
 
 .trunc-message{
@@ -54,7 +53,7 @@
   height: 0; 
   position: absolute;
   top: -20px;
-  right:110px;
+  right:100px;
   float: right;
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
@@ -102,7 +101,7 @@
   background-color: lightblue;
   border: 1px solid lightblue;
   border-radius: 5px;
-  z-index: 3000;
+  z-index: 3;
   top: -15px;
 }
 
